[tool.poetry]
name = "haker-news-proxy"
version = "0.1.0"
description = ""
authors = ["Anatolii Akinshin <a.akinshin@satvaspace.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"
waitress = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
